image path change

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#home">
-                    <img src="https://picsum.photos/seed/aptech-logo/200/200.jpg" alt="Aptech Premier League Logo">
+                    <img src="/Image/Logo.png" alt="Aptech Premier League Logo">
                     Aptech Premier League
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -128,7 +128,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="https://picsum.photos/seed/team-1-logo/200/200.jpg" alt="Karachi Kings Logo">
+                            <img src="/Image/1st.jpg" alt="Karachi Kings Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Karachi Kings</h3>
@@ -153,7 +153,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="https://picsum.photos/seed/team-2-logo/200/200.jpg" alt="Lahore Lions Logo">
+                            <img src="/Image/2nd.jpg" alt="Lahore Lions Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Lahore Lions</h3>
@@ -178,7 +178,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="https://picsum.photos/seed/team-3-logo/200/200.jpg" alt="Islamabad United Logo">
+                            <img src="/Image/3rd.jpg" alt="Islamabad United Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Islamabad United</h3>
@@ -203,7 +203,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="https://picsum.photos/seed/team-4-logo/200/200.jpg" alt="Peshawar Panthers Logo">
+                            <img src="/Image/4th.jpg" alt="Peshawar Panthers Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Peshawar Panthers</h3>
@@ -491,7 +491,7 @@
                 <div class="col-12" data-aos="fade-up">
                     <div class="ratio ratio-16x9">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.965614951585!2d67.03187931498193!3d24.933756284038353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f90157042d7%3A0x5b0d69c4f8f0e7a8!2sAptech%20Computer%20Education%20North%20Nazimabad!5e0!3m2!1sen!2s!4v1653427591234!5m2!1sen!2s"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.1522338510335!2d67.03217337443196!3d24.926883342598195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f90157042d3%3A0x93d609e8bec9a880!2sAptech%20Computer%20Education%20North%20Nazimabad%20Center!5e0!3m2!1sen!2s!4v1762846806392!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
