--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <img src="https://picsum.photos/seed/cricket-match/600/400.jpg"
+                    <img src="Image/5th.jpg"
                         alt="Cricket match at Aptech Premier League" class="img-fluid about-image">
                 </div>
             </div>
@@ -240,7 +240,7 @@
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="spot-card">
                         <div class="spot-image">
-                            <img src="https://picsum.photos/seed/national-stadium/400/300.jpg"
+                            <img src="Image/national.jpg"
                                 alt="National Stadium Karachi">
                         </div>
                         <div class="spot-info">
@@ -254,7 +254,7 @@
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="spot-card">
                         <div class="spot-image">
-                            <img src="https://picsum.photos/seed/aptech-ground/400/300.jpg" alt="Aptech Cricket Ground">
+                            <img src="Image/aptech.jpg" alt="Aptech Cricket Ground">
                         </div>
                         <div class="spot-info">
                             <h3 class="spot-name">Aptech Cricket Ground</h3>
@@ -267,7 +267,7 @@
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="spot-card">
                         <div class="spot-image">
-                            <img src="https://picsum.photos/seed/kcca-ground/400/300.jpg" alt="KCCA Ground">
+                            <img src="Image/KCCA.jpg" alt="KCCA Ground">
                         </div>
                         <div class="spot-info">
                             <h3 class="spot-name">KCCA Ground</h3>
