--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <img src="Image/5th.jpg"
+                    <img src="/Image/5th.jpg"
                         alt="Cricket match at Aptech Premier League" class="img-fluid about-image">
                 </div>
             </div>
