--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#home">
-                    <img src="/Image/Logo.png" alt="Aptech Premier League Logo">
+                    <img src="Image/Logo.png" alt="Aptech Premier League Logo">
                     Aptech Premier League
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <img src="/Image/5th.jpg"
+                    <img src="Image/5th.jpg"
                         alt="Cricket match at Aptech Premier League" class="img-fluid about-image">
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="/Image/1st.jpg" alt="Karachi Kings Logo">
+                            <img src="Image/1st.jpg" alt="Karachi Kings Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Karachi Kings</h3>
@@ -153,7 +153,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="/Image/2nd.jpg" alt="Lahore Lions Logo">
+                            <img src="Image/2nd.jpg" alt="Lahore Lions Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Lahore Lions</h3>
@@ -178,7 +178,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="/Image/3rd.jpg" alt="Islamabad United Logo">
+                            <img src="Image/3rd.jpg" alt="Islamabad United Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Islamabad United</h3>
@@ -203,7 +203,7 @@
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
                     <div class="team-card">
                         <div class="team-logo">
-                            <img src="/Image/4th.jpg" alt="Peshawar Panthers Logo">
+                            <img src="Image/4th.jpg" alt="Peshawar Panthers Logo">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Peshawar Panthers</h3>
