--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         content="Join Aptech Premier League, the best cricket league in Karachi. Experience top cricket tournaments with local teams. Register now for Karachi Premier Cricket League 2025!">
     <meta name="twitter:image" content="https://aptechpremierleague.com/images/twitter-image.jpg">
 
+    <meta name="google-site-verification" content="Ga4fa2F_sxqJbjCtWaNsNY0Vv66EEgHgib21KrHKOh8" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
